changed dt to t_Monitor for plots

--- a/RunMe_STDP-checkpoint.ipynb
+++ b/RunMe_STDP-checkpoint.ipynb
@@ -728,13 +728,13 @@
    "source": [
     "    for pp in range(0,N_Cells_PC,1):    \n",
     "        DCN_spikes_Uncoupled_STDP = DCN_Statemon_Uncoupled_STDP.v[:]\n",
-    "        Times_DCN_Uncoupled_STDP = DCN_Spikemon_Uncoupled_STDP.values('t')[pp]/(1*ms)\n",
+    "        Times_DCN_Uncoupled_STDP = DCN_Spikemon_Uncoupled_STDP.values('t')[pp]/(t_Monitor)\n",
     "        print(\"Number of spikes DCN: %s\"% np.size(Times_DCN_Uncoupled_STDP))\n",
     "        for t in range(0,np.size(Times_DCN_Uncoupled_STDP),1):\n",
     "            i = int(Times_DCN_Uncoupled_STDP[t])\n",
     "            DCN_spikes_Uncoupled_STDP[pp][i] = 60*mV\n",
     "        PC_spikes_Uncoupled_STDP = PC_Statemon_Uncoupled_STDP.v[:]\n",
-    "        Times_PC_Uncoupled_STDP = PC_Spikemon_Uncoupled_STDP.values('t')[pp]/(1*ms)\n",
+    "        Times_PC_Uncoupled_STDP = PC_Spikemon_Uncoupled_STDP.values('t')[pp]/(t_Monitor)\n",
     "        print(\"Number of spikes PC: %s\"% np.size(Times_PC_Uncoupled_STDP))\n",
     "        for t in range(0,np.size(Times_PC_Uncoupled_STDP),1):\n",
     "            i = int(Times_PC_Uncoupled_STDP[t])\n",
