spike times of PC sliced

--- a/Data_analysis.ipynb
+++ b/Data_analysis.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,8 +36,9 @@
     "import scipy.io as sio\n",
     "class Struct:\n",
     "    pass\n",
+    "\n",
     "# 1.2) Import data of simulations\n",
-    "nameInput = 'InputDS_1A05Hz1A14Hz'\n",
+    "nameInput = 'NoiseDS_test2'\n",
     "name_simparam = nameInput + '_SimParams'\n",
     "name_VoltCell = nameInput + '_VoltageCell'\n",
     "name_SpikeT = nameInput + '_SpikeTimes'\n",
@@ -53,17 +54,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10 20 20\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 2) Split Data - before/after adaptation    \n",
     "\n",
@@ -78,7 +71,8 @@
     "nrPC = VoltCell['VoltCell']['PC'][0][0].shape[0]\n",
     "nrDCN = VoltCell['VoltCell']['DCN'][0][0].shape[0]\n",
     "nrIO = VoltCell['VoltCell']['IOsoma'][0][0].shape[0]\n",
-    "\n",
+    "lengthSim =VoltCell['VoltCell']['PC'][0][0].shape[1]\n",
+    "# Input to the system\n",
     "Input_s = Struct()\n",
     "Input_s_I = [Input['Input']['I'][0][0][k][start_t:] for k in range(0,nrInputs)]\n",
     "Input_s.I_BA= [Input['Input']['I'][0][0][k][start_t:t_beforeAdaptation] for k in range(0,nrInputs)]\n",
@@ -86,6 +80,7 @@
     "Input_s.I_AA =[Input['Input']['I'][0][0][k][t_beforeAdaptation:] for k in range(0,nrInputs)]\n",
     "Input_s.nweight_AA =[Input['Input']['nweight'][0][0][k][t_beforeAdaptation:] for k in range(0,nrInputs)]\n",
     "\n",
+    "# Membrane potentials of all the different cells\n",
     "VoltCell_s = Struct()\n",
     "VoltCell_s.PC = [VoltCell['VoltCell']['PC'][0][0][k][start_t:] for k in range(0,nrPC)]\n",
     "VoltCell_s.PC_BA = [VoltCell['VoltCell']['PC'][0][0][k][start_t:t_beforeAdaptation] for k in range(0,nrPC)]\n",
@@ -98,7 +93,39 @@
     "VoltCell_s.IOsoma_AA =[VoltCell['VoltCell']['IOsoma'][0][0][k][t_beforeAdaptation:] for k in range(0,nrIO)]\n",
     "VoltCell_s.IOdend =[VoltCell['VoltCell']['IOdend'][0][0][k][start_t:] for k in range(0,nrIO)]\n",
     "VoltCell_s.IOdend =[VoltCell['VoltCell']['IOdend'][0][0][k][start_t:t_beforeAdaptation] for k in range(0,nrIO)]\n",
-    "VoltCell_s.IOdend =[VoltCell['VoltCell']['IOdend'][0][0][k][t_beforeAdaptation:] for k in range(0,nrIO)]"
+    "VoltCell_s.IOdend =[VoltCell['VoltCell']['IOdend'][0][0][k][t_beforeAdaptation:] for k in range(0,nrIO)]\n",
+    "SpikePC=[]\n",
+    "# Spike Times of all cells\n",
+    "SpikeTimes_s = Struct()\n",
+    "for p in range(0,nrPC):\n",
+    "    nr = str(p)\n",
+    "    PCnr = \"PC\" + nr\n",
+    "    BA_PCnr = 'PC_BA' + nr\n",
+    "    AA_PCnr = 'PC_AA'+ nr\n",
+    "    nrSpikesPC = SpikeTimes['SpikeTimes']['PC'][0][0][0][p][0].shape[0]\n",
+    "    setattr(SpikeTimes_s, PCnr, [SpikeTimes['SpikeTimes']['PC'][0][0][0][p][0][k] for k in range(0,nrSpikesPC) if SpikeTimes['SpikeTimes']['PC'][0][0][0][p][0][k]>=(start_t/1e3)])\n",
+    "    setattr(SpikeTimes_s, BA_PCnr, [SpikeTimes['SpikeTimes']['PC'][0][0][0][p][0][k] for k in range(0,nrSpikesPC) \n",
+    "                                    if (SpikeTimes['SpikeTimes']['PC'][0][0][0][p][0][k]>=(start_t/1e3) \n",
+    "                                        and SpikeTimes['SpikeTimes']['PC'][0][0][0][p][0][k]<=(lengthSim/(2*1e3)))])\n",
+    "    setattr(SpikeTimes_s, AA_PCnr, [SpikeTimes['SpikeTimes']['PC'][0][0][0][p][0][k] for k in range(0,nrSpikesPC) \n",
+    "                                    if SpikeTimes['SpikeTimes']['PC'][0][0][0][p][0][k]>=(t_beforeAdaptation/1e3)])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Struct object at 0x000002116A9BC940>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(SpikeTimes_s)"
    ]
   },
   {
