spike times IO and DCN added

--- a/Data_analysis.ipynb
+++ b/Data_analysis.ipynb
@@ -7,24 +7,23 @@
     "# Data Analysis of Olivocerebellar Model\n",
     "\n",
     "## Table of Contents\n",
-    "### 1) Import all\n",
-    "#### 1.1) Import packages\n",
-    "#### 1.2) Import data of simulations\n",
-    "\n",
-    "### 2) Split Data - before/after adaptation\n",
-    "### 3) "
+    "### 1. Import All\n",
+    "    1. Import packages\n",
+    "    2. Import data of simulations\n",
+    "### 2. Split Data - Before/After Adaptation\n",
+    "### 3. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1) Import all"
+    "## 1. Import All"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +32,7 @@
     "from brian2 import*\n",
     "import NeuroTools as nt\n",
     "import matplotlib as plt\n",
+    "from scipy.signal import find_peaks\n",
     "import scipy.io as sio\n",
     "class Struct:\n",
     "    pass\n",
@@ -53,8 +53,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Split Data - Before/After Adaptation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,6 +102,7 @@
     "VoltCell_s.IOdend =[VoltCell['VoltCell']['IOdend'][0][0][k][start_t:t_beforeAdaptation] for k in range(0,nrIO)]\n",
     "VoltCell_s.IOdend =[VoltCell['VoltCell']['IOdend'][0][0][k][t_beforeAdaptation:] for k in range(0,nrIO)]\n",
     "SpikePC=[]\n",
+    "\n",
     "# Spike Times of all cells\n",
     "SpikeTimes_s = Struct()\n",
     "for p in range(0,nrPC):\n",
@@ -108,25 +116,44 @@
     "                                    if (SpikeTimes['SpikeTimes']['PC'][0][0][0][p][0][k]>=(start_t/1e3) \n",
     "                                        and SpikeTimes['SpikeTimes']['PC'][0][0][0][p][0][k]<=(lengthSim/(2*1e3)))])\n",
     "    setattr(SpikeTimes_s, AA_PCnr, [SpikeTimes['SpikeTimes']['PC'][0][0][0][p][0][k] for k in range(0,nrSpikesPC) \n",
-    "                                    if SpikeTimes['SpikeTimes']['PC'][0][0][0][p][0][k]>=(t_beforeAdaptation/1e3)])\n"
+    "                                    if SpikeTimes['SpikeTimes']['PC'][0][0][0][p][0][k]>=(t_beforeAdaptation/1e3)])\n",
+    "for p in range(0,nrDCN):\n",
+    "    nr = str(p)\n",
+    "    DCNnr = \"DCN\" + nr\n",
+    "    BA_DCNnr = 'DCN_BA' + nr\n",
+    "    AA_DCNnr = 'DCN_AA'+ nr\n",
+    "    nrSpikesDCN = SpikeTimes['SpikeTimes']['DCN'][0][0][0][p][0].shape[0]\n",
+    "    setattr(SpikeTimes_s, DCNnr, [SpikeTimes['SpikeTimes']['DCN'][0][0][0][p][0][k] for k in range(0,nrSpikesDCN) \n",
+    "                                  if SpikeTimes['SpikeTimes']['DCN'][0][0][0][p][0][k]>=(start_t/1e3)])\n",
+    "    setattr(SpikeTimes_s, BA_DCNnr, [SpikeTimes['SpikeTimes']['DCN'][0][0][0][p][0][k] for k in range(0,nrSpikesDCN) \n",
+    "                                    if (SpikeTimes['SpikeTimes']['DCN'][0][0][0][p][0][k]>=(start_t/1e3) \n",
+    "                                        and SpikeTimes['SpikeTimes']['DCN'][0][0][0][p][0][k]<=(lengthSim/(2*1e3)))])\n",
+    "    setattr(SpikeTimes_s, AA_DCNnr, [SpikeTimes['SpikeTimes']['DCN'][0][0][0][p][0][k] for k in range(0,nrSpikesDCN) \n",
+    "                                    if SpikeTimes['SpikeTimes']['DCN'][0][0][0][p][0][k]>=(t_beforeAdaptation/1e3)])\n",
+    "\n",
+    "for p in range(0,nrIO):\n",
+    "    nr = str(p)\n",
+    "    IOnr = \"IO\" + nr\n",
+    "    BA_IOnr = 'IO_BA' + nr\n",
+    "    AA_IOnr = 'IO_AA'+ nr\n",
+    "    findspikes, _ = find_peaks(VoltCell['VoltCell']['IOsoma'][0][0][p], height=0.0, distance = 10)\n",
+    "    findspikes = findspikes/1000\n",
+    "    nrSpikesIO = len(findspikes)\n",
+    "    setattr(SpikeTimes_s, IOnr, [findspikes[k] for k in range(0,nrSpikesIO)\n",
+    "                                 if findspikes[k]>=(start_t/1e3)])\n",
+    "    setattr(SpikeTimes_s, BA_IOnr, [findspikes[k] for k in range(0,nrSpikesIO) \n",
+    "                                    if (findspikes[k]>=(start_t/1e3) and findspikes[k]<=(lengthSim/(2*1e3)))])\n",
+    "    setattr(SpikeTimes_s, AA_IOnr, [findspikes[k] for k in range(0,nrSpikesIO) \n",
+    "                                    if findspikes[k]>=(t_beforeAdaptation/1e3)])\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<__main__.Struct object at 0x000002116A9BC940>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(SpikeTimes_s)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
