--- a/Data_analysis_pt2.ipynb
+++ b/Data_analysis_pt2.ipynb
@@ -79,7 +79,7 @@
     "# after = t_beforeAdaptaion:end\n",
     "# indicated by BA (BeforeAdaptation) and AA (AfterAdaptation) accordingly\n",
     "\n",
-    "start = 0 # remove first second of data due to transient\n",
+    "start = 1000 # remove first second of data due to transient\n",
     "t_beforeAdaptation = int(len(Input_STDP['I'][1])/2)\n",
     "\n",
     "nrInputs=Input_STDP['I'].shape[0] # number of inputs\n",
@@ -2977,15 +2977,203 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(0,nrPC):\n",
-    "    x=len(SpikeTimes_STDP['PC_coupled'][i])/(5)   \n",
-    "    xl=len(SpikeTimes_STDP['PC_uncoupled'][i])/(5)   \n",
-    "    x1=len(SpikeTimes_STDP['IO_coupled'][i])\n",
-    "    x2=len(SpikeTimes_STDP['IO_coupled'][i+10])\n",
+    "# 6.1 Input Current Purkinje Cell\n",
+    "# Get the current that the Purkinje cell sees 150 ms before and 50 ms after\n",
+    "# a complex spike of the connected Inferior Olive\n",
     "\n",
-    "    print(x)\n",
-    "    print(xl)\n",
-    "    #print(x)"
+    "# The IO cells that are connected to the Purkinje cells. \n",
+    "# Position 1 of the vector corresponds to PC1, 2 to PC2 etc.\n",
+    "connectionVectorIO = [9,10, 18, 17, 0, 6, 5, 12, 16, 11]\n",
+    "\n",
+    "time_before_spike = 200e-3\n",
+    "time_after_spike = 200e-3\n",
+    "CS_currentPC=defaultdict(dict)\n",
+    "duration = int((time_before_spike+time_after_spike)*1e3)\n",
+    "\n",
+    "#print(dur)\n",
+    "meancur_BA=np.zeros((nrPC,duration))\n",
+    "meancur_AA=np.zeros((nrPC,duration))\n",
+    "\n",
+    "sep_curBA=np.zeros((nrPC*2,duration))\n",
+    "sep_curAA=np.zeros((nrPC*2,duration))\n",
+    "\n",
+    "mean_voltIO_AA = np.zeros((nrPC,duration))\n",
+    "mean_voltIO_BA = np.zeros((nrPC,duration))\n",
+    "\n",
+    "weight_BA = np.zeros((nrInputs*nrPC,duration))\n",
+    "weight_AA = np.zeros((nrInputs*nrPC,duration))\n",
+    "\n",
+    "InpPCBA = Input_BA['I_InputPC']\n",
+    "InpPCAA = Input_AA['I_InputPC']\n",
+    "\n",
+    "#print(InpPC)\n",
+    "for jj in range(0,nrPC):\n",
+    "    strp = str(connectionVectorIO[jj])\n",
+    "    pcnr = 'PC'+str(jj)+'BA'\n",
+    "    pcnr2 = 'PC'+str(jj)+'AA'\n",
+    "    w_pcnr = 'WeightPC'+str(jj)+'BA'\n",
+    "    w2_pcnr = 'WeightPC'+str(jj)+'AA'\n",
+    "    #SpikesIO = SpikeTimes_s.ionr\n",
+    "    \n",
+    "    # Input current I_Noise to PC\n",
+    "    InputCurrBA = InpPCBA[jj]\n",
+    "    InputCurrAA = InpPCAA[jj]\n",
+    "    \n",
+    "    # Seperate Inputs (after weight multiplication)\n",
+    "    sep_inpba=InputCurrentPC_BA[pcnr]\n",
+    "    sep_inpaa=InputCurrentPC_AA[pcnr2]\n",
+    "    \n",
+    "    # Get weights \n",
+    "    sep_wBA =InputCurrentPC_BA[w_pcnr]\n",
+    "    sep_wAA = InputCurrentPC_AA[w2_pcnr]\n",
+    "    # Membrane potential of IO cells\n",
+    "    voltIO_BA = VoltCell_BA['IOsoma'][connectionVectorIO[jj]]\n",
+    "    voltIO_AA = VoltCell_AA['IOsoma'][connectionVectorIO[jj]]\n",
+    "    \n",
+    "    #print(InputCurrBA, sep_inpba)\n",
+    "    #print(sep_inpba[1])\n",
+    "    #InputCurrentPC[pcnr]\n",
+    "    #VoltPC = VoltCell_['PC'][jj]\n",
+    "    #print(VoltPC)\n",
+    "    \n",
+    "    CS_BA= SpikeTimes_BA['IO'][connectionVectorIO[jj]]\n",
+    "    CS_AA = SpikeTimes_AA['IO'][connectionVectorIO[jj]]\n",
+    "    \n",
+    "    # initialization of empty array which are assigned in the loop below\n",
+    "    empt_BA =np.zeros((len(CS_BA),duration))\n",
+    "    empt_AA =np.zeros((len(CS_AA),duration))\n",
+    "    empt_curBA =np.zeros((len(CS_BA)*nrInputs,duration))\n",
+    "    empt_curAA =np.zeros((len(CS_AA)*nrInputs,duration))\n",
+    "    empt_membIO_BA = np.zeros((len(CS_BA),duration))\n",
+    "    empt_membIO_AA = np.zeros((len(CS_AA),duration))\n",
+    "    \n",
+    "    empt_wAA = np.zeros((len(CS_AA)*nrInputs,duration))\n",
+    "    empt_wBA = np.zeros((len(CS_BA)*nrInputs,duration))\n",
+    "\n",
+    "    k=0\n",
+    "    for ii in range(0,len(CS_BA)):\n",
+    "        begin_analysis = max(int(((CS_BA[ii]-time_before_spike)/1e-3)),CS_BA[0]*1000)-start\n",
+    "        end_analysis = (int((min((CS_BA[ii]+time_after_spike)/1e-3,\n",
+    "                        CS_BA[-1]*1000))))-start\n",
+    "        #print('before adding', end_analysis-begin_analysis)\n",
+    "        if end_analysis-begin_analysis==duration-1 : \n",
+    "            end_analysis=end_analysis+1\n",
+    "        elif end_analysis-begin_analysis==duration+1 : \n",
+    "            end_analysis=end_analysis-1\n",
+    "        #print('after adding', end_analysis-begin_analysis)\n",
+    "        \n",
+    "        \n",
+    "        if (end_analysis-abs(begin_analysis))==duration :\n",
+    "            #CS_currentPC[ionr][ii] = InputCurr[begin_analysis:end_analysis]\n",
+    "            empt_BA[ii]= InputCurrBA[begin_analysis:end_analysis]\n",
+    "            \n",
+    "            # Individual inputs to the PC\n",
+    "            for t in range(0,nrInputs):\n",
+    "                empt_wBA[ii*2+t] = sep_wBA[t][begin_analysis:end_analysis]\n",
+    "                empt_curBA[ii*2+t]=sep_inpba[t][begin_analysis:end_analysis]\n",
+    "                \n",
+    "            \n",
+    "            # IO membrane potential \n",
+    "            empt_membIO_BA[ii] = voltIO_BA[begin_analysis:end_analysis]\n",
+    "            \n",
+    "            \n",
+    "            #empt_curBA[1+ii*2]=sep_inpba[1][begin_analysis:end_analysis]\n",
+    "            #print(empt_curBA[ii*2])\n",
+    "            #print('got here',empt_curBA)\n",
+    "            #empt_VBA[ii]=VoltPC[begin_analysis:end_analysis]\n",
+    "        else:\n",
+    "            lopl=2+1\n",
+    "            #print(end_analysis-begin_analysis)\n",
+    "            #print('too short')\n",
+    "        #print(empt_curBA[ii*2+t])\n",
+    "        #print('empt cur ba',empt_curBA)\n",
+    "    #print(len(CS_AA))\n",
+    "    for kk in range(0,len(CS_AA)):\n",
+    "        begin_analysis = max(int(((CS_AA[kk]-time_before_spike)/1e-3)),CS_AA[0]*1e3)-t_beforeAdaptation\n",
+    "        #print('begin analysis', begin_analysis)\n",
+    "        end_analysis = int((min((CS_AA[kk]+time_after_spike)/1e-3,\n",
+    "                        CS_AA[-1]*1000)))-t_beforeAdaptation\n",
+    "        #print('end analysis', end_analysis)\n",
+    "        #print(end_analysis-begin_analysis)\n",
+    "        if end_analysis-begin_analysis==duration-1 : \n",
+    "            end_analysis=end_analysis+1\n",
+    "        elif end_analysis-begin_analysis==duration+1 : \n",
+    "            end_analysis=end_analysis-1\n",
+    "            \n",
+    "        if (end_analysis-abs(begin_analysis))==duration :\n",
+    "            #print('got there')\n",
+    "            #CS_currentPC[ionr][kk] = InputCurr[begin_analysis:end_analysis]\n",
+    "            #print('aa begin', begin_analysis, 'end aa', end_analysis)\n",
+    "            empt_AA[kk]= InputCurrAA[begin_analysis:end_analysis] \n",
+    "            \n",
+    "            # get the individual inputs to the PC\n",
+    "            for tt in range(0,nrInputs):\n",
+    "                empt_curAA[kk*2+tt]=sep_inpaa[tt][begin_analysis:end_analysis]\n",
+    "                empt_wAA[kk*2+tt] = sep_wAA[tt][begin_analysis:end_analysis]\n",
+    "\n",
+    "            \n",
+    "            # IO membrane potential\n",
+    "            empt_membIO_AA[kk] = voltIO_AA[begin_analysis:end_analysis]\n",
+    "        \n",
+    "            \n",
+    "        else:\n",
+    "            p=9\n",
+    "            #print(end_analysis-begin_analysis)\n",
+    "            #print('too short')\n",
+    "\n",
+    "    #print(empt_curBA)                \n",
+    "                #print('not full time - too close to beginning')\n",
+    "    #print('shape_BA',empt_BA.shape)\n",
+    "    #print('shape AA',empt_AA.shape)\n",
+    "    \n",
+    "    # remove zeros - still present when the scope around CS is too large (e.g. CS at 0.2s and try to look at +/-0.3)\n",
+    "    empt_BA = empt_BA[~all(empt_BA==0, axis=1)]\n",
+    "    empt_AA = empt_AA[~all(empt_AA==0, axis=1)]\n",
+    "    \n",
+    "    empt_curAA=empt_curAA[~all(empt_curAA==0, axis=1)]\n",
+    "    empt_curBA=empt_curBA[~all(empt_curBA==0, axis=1)]\n",
+    "    \n",
+    "    empt_membIO_AA=empt_membIO_AA[~all(empt_membIO_AA==0,axis=1)]\n",
+    "    empt_membIO_BA=empt_membIO_BA[~all(empt_membIO_BA==0,axis=1)]\n",
+    "    \n",
+    "    empt_wAA=empt_wAA[~all(empt_wAA==0,axis=1)]\n",
+    "    empt_wBA=empt_wBA[~all(empt_wBA==0,axis=1)]\n",
+    "    \n",
+    "    #print(empt_membIO_AA)\n",
+    "    #print('empt cur after remove 0',empt_curBA.shape[0], 'nr cs ba', len(CS_BA),'times got there', k)\n",
+    "    #print(empt_curBA.shape[0])\n",
+    "    #empt_VBA = empt_VBA[~all(empt_VBA==0, axis=1)]\n",
+    "    #empt_VAA = empt_VAA[~all(empt_VAA==0, axis=1)]\n",
+    "    #print('AA =',empt_AA)\n",
+    "    #print('BA = ',empt_BA)\n",
+    "    #empt=argwhere(empt)\n",
+    "    #print(empt)\n",
+    "    meancur_BA[jj] = mean(empt_BA,axis=0)\n",
+    "    meancur_AA[jj] = mean(empt_AA,axis=0)\n",
+    "    p = [arange(0,empt_curBA.shape[0],2),arange(1,empt_curBA.shape[0],2)]\n",
+    "    pp = [arange(0,empt_curAA.shape[0],2),arange(1,empt_curAA.shape[0],2)]\n",
+    "    #pp = arange(1,empt_curBA.shape[0],2)\n",
+    "    #print('p',p,'pp=',pp)\n",
+    "    for uu in range(0,nrInputs):\n",
+    "        sep_curBA[jj*2+uu] = mean(empt_curBA[p[uu]], axis=0)\n",
+    "        sep_curAA[jj*2+uu] = mean(empt_curAA[pp[uu]], axis=0)\n",
+    "        \n",
+    "        weight_BA[jj*2+uu] = mean(empt_wBA[p[uu]],axis=0)\n",
+    "        weight_AA[jj*2+uu] = mean(empt_wAA[pp[uu]],axis=0)\n",
+    "        \n",
+    "    \n",
+    "    mean_voltIO_AA[jj] = mean(empt_membIO_AA,axis=0)\n",
+    "    mean_voltIO_BA[jj] = mean(empt_membIO_BA,axis=0)\n",
+    "print(mean_voltIO_BA.shape[0])\n",
+    "print(mean_voltIO_AA.shape[0])\n",
+    "\n",
+    "    #sep_curAA[jj*2,jj*2+1] = mean(empt_curAA,axis=0)\n",
+    "#print(sep_curBA.shape[0])\n",
+    "#print(sep_curAA.shape[0])\n",
+    "    #meancur_VBA[jj] =mean(empt_VBA,axis=0)\n",
+    "    #meancur_VAA[jj] =mean(empt_VAA,axis=0)\n",
+    "#print(k)\n",
+    "    #print('mean input current =',mean(empt,axis=0))"
    ]
   },
   {
